// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DigitTile snapshots the blackout state 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1.5,
        "justifyContent": "center",
      },
      null,
      {
        "backgroundColor": "rgba(31,33,66,0.6)",
        "borderColor": "#4c1d95",
        "borderRadius": 10,
        "height": 48,
        "width": 48,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "JetBrainsMono-Bold",
          "fontWeight": "700",
        },
        {
          "color": "#f5f5f7",
          "fontSize": 23,
        },
      ]
    }
  >
    7
  </Text>
</View>
`;

exports[`DigitTile snapshots the gray state 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1.5,
        "justifyContent": "center",
      },
      null,
      {
        "backgroundColor": "rgba(90,90,122,0.2)",
        "borderColor": "#5a5a7a",
        "borderRadius": 10,
        "height": 48,
        "width": 48,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "JetBrainsMono-Bold",
          "fontWeight": "700",
        },
        {
          "color": "#5a5a7a",
          "fontSize": 23,
        },
      ]
    }
  >
    7
  </Text>
</View>
`;

exports[`DigitTile snapshots the green state 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1.5,
        "justifyContent": "center",
      },
      {
        "shadowColor": "rgba(16,185,129,0.55)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 12,
      },
      {
        "backgroundColor": "rgba(16,185,129,0.18)",
        "borderColor": "#10b981",
        "borderRadius": 10,
        "height": 48,
        "width": 48,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "JetBrainsMono-Bold",
          "fontWeight": "700",
        },
        {
          "color": "#d1fae5",
          "fontSize": 23,
        },
      ]
    }
  >
    7
  </Text>
</View>
`;

exports[`DigitTile snapshots the neutral state 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1.5,
        "justifyContent": "center",
      },
      null,
      {
        "backgroundColor": "#15172e",
        "borderColor": "#2a2c54",
        "borderRadius": 10,
        "height": 48,
        "width": 48,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "JetBrainsMono-Bold",
          "fontWeight": "700",
        },
        {
          "color": "#f5f5f7",
          "fontSize": 23,
        },
      ]
    }
  >
    7
  </Text>
</View>
`;

exports[`DigitTile snapshots the violet state 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1.5,
        "justifyContent": "center",
      },
      {
        "shadowColor": "rgba(139,92,246,0.4)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 12,
      },
      {
        "backgroundColor": "rgba(139,92,246,0.15)",
        "borderColor": "#8b5cf6",
        "borderRadius": 10,
        "height": 48,
        "width": 48,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "JetBrainsMono-Bold",
          "fontWeight": "700",
        },
        {
          "color": "#ede9fe",
          "fontSize": 23,
        },
      ]
    }
  >
    7
  </Text>
</View>
`;

exports[`DigitTile snapshots the yellow state 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderWidth": 1.5,
        "justifyContent": "center",
      },
      {
        "shadowColor": "rgba(245,158,11,0.4)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 12,
      },
      {
        "backgroundColor": "rgba(245,158,11,0.2)",
        "borderColor": "#f59e0b",
        "borderRadius": 10,
        "height": 48,
        "width": 48,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "JetBrainsMono-Bold",
          "fontWeight": "700",
        },
        {
          "color": "#fde68a",
          "fontSize": 23,
        },
      ]
    }
  >
    7
  </Text>
</View>
`;
